--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>ProjectManager</title>
+    <link rel="icon" href="./public/favicon.ico"></link>
     <link rel="stylesheet" href="app.css" />
     <script src="dist/app.js" defer></script>
 </head>
@@ -25,6 +26,7 @@
                 <label for="people">People</label>
                 <input type="number" id="people" step="1" min="0" max="10" />
             </div>
+            <ul id="error-list"></ul>
             <button type="submit">ADD PROJECT</button>
         </form>
     </template>
